# web-check

./: .env.example  .gitignore  .pre-commit-config.yaml  .python-version  CHANGELOG.md  CLI.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Dockerfile  Makefile  README.md  TODO.md  TODO.yml  alembic.ini  docker-compose.dev.yml  docker-compose.yml  my-check.config.json  pyproject.toml  vigil.db
.github/: LICENSE  SECURITY.md  copilot-instructions.md  dependabot.yml
.github/release/: release-please-config.json
.github/workflows/: cd.yml  ci-cd.yml  ci.yml  security-scan.yml
api/: __init__.py  database.py  main.py
api/models/: __init__.py  db_models.py  results.py
api/routers/: __init__.py  deep.py  health.py  quick.py  scans.py  security.py
api/services/: db_service.py  docker_runner.py  log_streamer.py  nikto.py  nuclei.py  sqlmap_scanner.py  sslyze_scanner.py  wapiti_scanner.py  xsstrike_scanner.py  zap.py  zap_native.py
api/tests/: __init__.py  conftest.py  test_api.py  test_scanners.py
api/utils/: __init__.py  config.py
apps/: Dockerfile  Makefile  __init__.py  alembic.ini  docker-compose.yml
apps/alembic/: env.py
apps/alembic/versions/: 1dd0c571c561_initial_database_schema.py
apps/api/: __init__.py  database.py  main.py
apps/api/models/: __init__.py  db_models.py  findings.py  results.py
apps/api/routers/: __init__.py  advanced.py  deep.py  quick.py  scans.py  security.py
apps/api/services/: __init__.py  db_service.py  dns_enum.py  docker_runner.py  headers_scanner.py  log_streamer.py  nikto.py  nuclei.py  sqlmap_scanner.py  sslyze_scanner.py  wapiti_scanner.py  xsstrike_scanner.py  zap_native.py
apps/api/tests/: __init__.py  test_api.py  test_models.py  test_scanners.py
apps/api/utils/: config.py
apps/cli/: __init__.py  main.py  report.py
apps/cli/commands/: __init__.py  check.py  config.py  domains.py  results.py  scan.py
apps/cli/utils/: __init__.py  config.py  http_client.py
apps/config/: settings.conf
apps/config/wordlists/: common.txt
apps/my_check/: __init__.py  cli.py  config.py  registry.py  scheduler.py  types.py  wizard.py
apps/my_check/checks/k8s/: __init__.py  etcd_encryption.py  images.py  network_policies.py  pss_compliance.py  rbac.py  secrets.py  workloads.py
apps/my_check/checks/k8s/wrappers/: falco.py  kube_bench.py  polaris.py  trivy.py
apps/my_check/checks/web/: cookies.py  cors.py  csp.py  dns.py  headers.py  ports.py  redirects.py  subdomain_takeover.py  tls.py
apps/my_check/reporters/: html.py  json_reporter.py  markdown_reporter.py  terminal.py  webhook.py
apps/web/: Dockerfile  index.html  package.json
apps/web/src/: index.css
apps/web/src/components/: ScanForm.tsx  SeverityBadge.tsx  ToolSelector.tsx
apps/web/src/services/: api.ts
config/: settings.conf
config/wordlists/: common.txt
docs/: architecture.md  configuration.md  development.md  index.md  my-check.md
scripts/: report.sh  scan.sh
scripts/lib/: html_report.sh  json_report.sh  markdown_report.sh  parsers.sh  utils.sh
tests/: test_api.py  test_models.py
web/: .env.example  .gitignore  .oxfmtrc.json  .oxlintrc.json  Dockerfile  index.html  nginx.conf  package.json  tailwind.config.js  vite.config.ts
web/src/: App.tsx  index.css  main.tsx
web/src/components/: ScanForm.tsx  ScanLogStream.tsx  ScanResult.tsx  ScanStats.tsx  ScanTimeline.tsx  SeverityBadge.tsx  ToolSelector.tsx
web/src/constants/: tools.ts
web/src/lib/: utils.ts
web/src/services/: api.ts
web/src/types/: api.ts
