[project]
name = "web-check"
version = "0.1.1"
description = "Docker-based security scanning toolkit"
authors = [
    {name = "Kevin De Benedetti", email = "kevin@example.com"},
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115.13",
    "uvicorn[standard]>=0.34.0",
    "pydantic>=2.12.5",
    "pydantic-settings>=2.7.1",
    "httpx>=0.28.1",
    "structlog>=25.5.0",
    "python-json-logger>=4.0.0",
    "sqlalchemy>=2.0.28,<2.1",
    "alembic>=1.18.0",
    "aiosqlite>=0.20.0",
    "python-owasp-zap-v2.4>=0.0.22",
    "sslyze>=6.0.0",
    "sqlmap>=1.8.11",
]

[dependency-groups]
dev = [
    "pytest>=9.0.2",
    "pytest-asyncio>=1.3.0",
    "pytest-cov>=6.0.0",
    "ruff>=0.8.5",
    "ty>=0.0.11",
    "prek>=0.2.23",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["api"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "B",   # flake8-bugbear
    "C4",  # flake8-comprehensions
    "UP",  # pyupgrade
]
ignore = [
    "E501",  # line too long (handled by ruff format)
    "B008",  # do not perform function calls in argument defaults
]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
line-ending = "auto"

[tool.ty.environment]
python-version = "3.12"
python = ".venv"
python-platform = "all"
root = ["api"]

[tool.ty.rules]
# Critical errors
possibly-unresolved-reference = "error"
unsupported-operator = "error"
division-by-zero = "error"

# Warnings (FastAPI/Starlette middleware typing issues)
invalid-argument-type = "warn"
unused-ignore-comment = "warn"
redundant-cast = "warn"

[tool.ty.src]
include = ["api"]
exclude = ["**/__pycache__", "**/node_modules", ".venv", "outputs"]
respect-ignore-files = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
